--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   camera_camera: ^2.0.2
   gallery_saver: ^2.3.2
+  firebase_core: ^2.4.0
+  http: ^0.13.5
+  firebase_auth: ^4.2.0
 
 
 dev_dependencies:
